// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SVG Testing Test SVGs 1`] = `
"
    <svg
        width="20"
        height="10"
        viewBox="0 0 20 10"
        fill="none"
        xmlns="http://www.w3.org/2000/svg">
            <rect xmlns="http://www.w3.org/2000/svg" data-testid="card_bg" id="cardBg"
            x="0" y="0" rx="0" height="100%" stroke="#E4E2E2" fill-opacity="1"
            width="100%" fill="#44475a" stroke-opacity="1" style="stroke:#0000; stroke-width:1;"/>

            <style>
                body {
                    font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
                }
                .header {
                    font: 600 20px 'Segoe UI', Ubuntu, Sans-Serif;
                    text-align: center;
                    color: #f8f8f2;
                    margin-top: 20px;
                }
                svg {
                    font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
                    user-select: none;
                }
                
    .ct-label {
      fill: #f8f8f2;
      color: #f8f8f2;
      font-size: .75rem;
      line-height: 1;
    }

    .ct-grid-background,
    .ct-line {
      fill: none;
    }

    .ct-chart-bar .ct-label,
    .ct-chart-line .ct-label {
      display: block;
      display: -webkit-box;
      display: -moz-box;
      display: -ms-flexbox;
      display: -webkit-flex;
      display: flex;
    }

    .ct-label.ct-horizontal.ct-start {
      -webkit-box-align: flex-end;
      -webkit-align-items: flex-end;
      -ms-flex-align: flex-end;
      align-items: flex-end;
      -webkit-box-pack: flex-start;
      -webkit-justify-content: flex-start;
      -ms-flex-pack: flex-start;
      justify-content: flex-start;
      text-align: left;
      text-anchor: start;
    }

    .ct-label.ct-horizontal.ct-end {
      -webkit-box-align: flex-start;
      -webkit-align-items: flex-start;
      -ms-flex-align: flex-start;
      align-items: flex-start;
      -webkit-box-pack: flex-start;
      -webkit-justify-content: flex-start;
      -ms-flex-pack: flex-start;
      justify-content: flex-start;
      text-anchor: end;
      transform: rotate(-45deg);
      -webkit-transform: rotate(-45deg);
      -moz-transform: rotate(-45deg);
      transform-box: fill-box;
      transform-origin: 100% 0;
    }

    .ct-label.ct-vertical.ct-start {
      -webkit-box-align: flex-end;
      -webkit-align-items: flex-end;
      -ms-flex-align: flex-end;
      align-items: flex-end;
      -webkit-box-pack: flex-end;
      -webkit-justify-content: flex-end;
      -ms-flex-pack: flex-end;
      justify-content: flex-end;
      text-align: right;
      text-anchor: end;
    }

    .ct-label.ct-vertical.ct-end {
      -webkit-box-align: flex-end;
      -webkit-align-items: flex-end;
      -ms-flex-align: flex-end;
      align-items: flex-end;
      -webkit-box-pack: flex-start;
      -webkit-justify-content: flex-start;
      -ms-flex-pack: flex-start;
      justify-content: flex-start;
      text-align: left;
      text-anchor: start;
    }

    .ct-grid {
      stroke: #f8f8f2;
      stroke-width: 1px;
      stroke-opacity: 0.3;
      stroke-dasharray: 2px;
    }

    .ct-point {
      stroke-width: 10px;
      stroke-linecap: round;
      animation: blink 1s ease-in-out forwards;
    }

    .ct-line {
      stroke-width: 4px;
      stroke-dasharray: 5000;
      stroke-dashoffset: 5000;
      animation: dash 5s ease-in-out forwards;
    }

    .ct-area {
      stroke: none;
      fill-opacity: 0.1;
    }

    /* macOS series */
    .ct-series-a .ct-line { stroke: #5bcdec; }
    .ct-series-a .ct-point { stroke: #5bcdec; }
    .ct-series-a .ct-area { fill: #5bcdec; }

    /* Linux series */
    .ct-series-b .ct-line { stroke: #f9a825; }
    .ct-series-b .ct-point { stroke: #f9a825; }
    .ct-series-b .ct-area { fill: #f9a825; }

    /* Windows series */
    .ct-series-c .ct-line { stroke: #4caf50; }
    .ct-series-c .ct-point { stroke: #4caf50; }
    .ct-series-c .ct-area { fill: #4caf50; }

    .ct-label .ct-horizontal {
      transform: rotate(-90deg)
    }
    
                
        @keyframes blink {
            from {
                opacity: 0;
                transform:translateX(-20px); 
            }
            to {
                opacity:1;
                transform: translateX(0);
            }
        }
    
                
        @keyframes dash {
            to {
                stroke-dashoffset: 0;
            }
        }
    
    
            </style>

            <foreignObject x="0" y="0" width="20" height="50">
                <h1 xmlns="http://www.w3.org/1999/xhtml" class="header">
                    graphSvg
                </h1>
            </foreignObject>
            <g class=\\"legend\\" transform=\\"translate(-110, -8)\\">
                <rect x=\\"0\\" y=\\"0\\" width=\\"12\\" height=\\"12\\" fill=\\"#5bcdec\\"/>
                <text x=\\"18\\" y=\\"11\\" fill=\\"#f8f8f2\\" font-size=\\"12\\" font-family=\\"'Segoe UI', Ubuntu, Sans-Serif\\">macOS</text>
                <rect x=\\"80\\" y=\\"0\\" width=\\"12\\" height=\\"12\\" fill=\\"#f9a825\\"/>
                <text x=\\"98\\" y=\\"11\\" fill=\\"#f8f8f2\\" font-size=\\"12\\" font-family=\\"'Segoe UI', Ubuntu, Sans-Serif\\">Linux</text>
                <rect x=\\"150\\" y=\\"0\\" width=\\"12\\" height=\\"12\\" fill=\\"#4caf50\\"/>
                <text x=\\"168\\" y=\\"11\\" fill=\\"#f8f8f2\\" font-size=\\"12\\" font-family=\\"'Segoe UI', Ubuntu, Sans-Serif\\">Windows</text>
            </g>
            [object Promise]
            
    </svg>
"
`;

exports[`SVG Testing Test SVGs 2`] = `
"
    <svg
        width="400"
        height="200"
        viewBox="0 0 420 200"
        fill="none"
        xmlns="http://www.w3.org/2000/svg">
        <style>
                svg {
                    font: 600 14px 'Segoe UI', Ubuntu, Sans-Serif;
                }
        </style>
        <rect xmlns="http://www.w3.org/2000/svg" data-testid="card_bg" id="cardBg" x="0.5"
        y="0.5" rx="4.5" height="100%" stroke="#E4E2E2" fill-opacity="1" width="100%"
        fill="#44475a" stroke-opacity="1"/>
        <text x="20" y="100" fill="#bd93f9">User not found!</text>
    </svg>
"
`;

exports[`SVG Testing chart SVGs 1`] = `
"
    <svg
        width="1200"
        height="420"
        viewBox="0 0 1200 420"
        fill="none"
        xmlns="http://www.w3.org/2000/svg">
            <rect xmlns="http://www.w3.org/2000/svg" data-testid="card_bg" id="cardBg"
            x="0" y="0" rx="8" height="100%" stroke="#E4E2E2" fill-opacity="1"
            width="100%" fill="#ffcfe9" stroke-opacity="1" style="stroke:#ffffff; stroke-width:1;"/>

            <style>
                body {
                    font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
                }
                .header {
                    font: 600 20px 'Segoe UI', Ubuntu, Sans-Serif;
                    text-align: center;
                    color: #ffffff;
                    margin-top: 20px;
                }
                svg {
                    font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
                    user-select: none;
                }
                
    .ct-label {
      fill: #9e4c98;
      color: #9e4c98;
      font-size: .75rem;
      line-height: 1;
    }

    .ct-grid-background,
    .ct-line {
      fill: none;
    }

    .ct-chart-bar .ct-label,
    .ct-chart-line .ct-label {
      display: block;
      display: -webkit-box;
      display: -moz-box;
      display: -ms-flexbox;
      display: -webkit-flex;
      display: flex;
    }

    .ct-label.ct-horizontal.ct-start {
      -webkit-box-align: flex-end;
      -webkit-align-items: flex-end;
      -ms-flex-align: flex-end;
      align-items: flex-end;
      -webkit-box-pack: flex-start;
      -webkit-justify-content: flex-start;
      -ms-flex-pack: flex-start;
      justify-content: flex-start;
      text-align: left;
      text-anchor: start;
    }

    .ct-label.ct-horizontal.ct-end {
      -webkit-box-align: flex-start;
      -webkit-align-items: flex-start;
      -ms-flex-align: flex-start;
      align-items: flex-start;
      -webkit-box-pack: flex-start;
      -webkit-justify-content: flex-start;
      -ms-flex-pack: flex-start;
      justify-content: flex-start;
      text-anchor: end;
      transform: rotate(-45deg);
      -webkit-transform: rotate(-45deg);
      -moz-transform: rotate(-45deg);
      transform-box: fill-box;
      transform-origin: 100% 0;
    }

    .ct-label.ct-vertical.ct-start {
      -webkit-box-align: flex-end;
      -webkit-align-items: flex-end;
      -ms-flex-align: flex-end;
      align-items: flex-end;
      -webkit-box-pack: flex-end;
      -webkit-justify-content: flex-end;
      -ms-flex-pack: flex-end;
      justify-content: flex-end;
      text-align: right;
      text-anchor: end;
    }

    .ct-label.ct-vertical.ct-end {
      -webkit-box-align: flex-end;
      -webkit-align-items: flex-end;
      -ms-flex-align: flex-end;
      align-items: flex-end;
      -webkit-box-pack: flex-start;
      -webkit-justify-content: flex-start;
      -ms-flex-pack: flex-start;
      justify-content: flex-start;
      text-align: left;
      text-anchor: start;
    }

    .ct-grid {
      stroke: #9e4c98;
      stroke-width: 1px;
      stroke-opacity: 0.3;
      stroke-dasharray: 2px;
    }

    .ct-point {
      stroke-width: 10px;
      stroke-linecap: round;
      animation: blink 1s ease-in-out forwards;
    }

    .ct-line {
      stroke-width: 4px;
      stroke-dasharray: 5000;
      stroke-dashoffset: 5000;
      animation: dash 5s ease-in-out forwards;
    }

    .ct-area {
      stroke: none;
      fill-opacity: 0.1;
    }

    /* macOS series */
    .ct-series-a .ct-line { stroke: #5bcdec; }
    .ct-series-a .ct-point { stroke: #5bcdec; }
    .ct-series-a .ct-area { fill: #5bcdec; }

    /* Linux series */
    .ct-series-b .ct-line { stroke: #f9a825; }
    .ct-series-b .ct-point { stroke: #f9a825; }
    .ct-series-b .ct-area { fill: #f9a825; }

    /* Windows series */
    .ct-series-c .ct-line { stroke: #4caf50; }
    .ct-series-c .ct-point { stroke: #4caf50; }
    .ct-series-c .ct-area { fill: #4caf50; }

    .ct-label .ct-horizontal {
      transform: rotate(-90deg)
    }
    
                
        @keyframes blink {
            from {
                opacity: 0;
                transform:translateX(-20px); 
            }
            to {
                opacity:1;
                transform: translateX(0);
            }
        }
    
                
        @keyframes dash {
            to {
                stroke-dashoffset: 0;
            }
        }
    
    
            </style>

            <foreignObject x=\\"0\\" y=\\"0\\" width=\\"1200\\" height=\\"50\\">
                <h1 xmlns=\\"http://www.w3.org/1999/xhtml\\" class=\\"header\\">
                    owner/repo Downloads
                </h1>
            </foreignObject>
            <g class=\\"legend\\" transform=\\"translate(480, 402)\\">
                <rect x=\\"0\\" y=\\"0\\" width=\\"12\\" height=\\"12\\" fill=\\"#5bcdec\\"/>
                <text x=\\"18\\" y=\\"11\\" fill=\\"#9e4c98\\" font-size=\\"12\\" font-family=\\"'Segoe UI', Ubuntu, Sans-Serif\\">macOS</text>
                <rect x=\\"80\\" y=\\"0\\" width=\\"12\\" height=\\"12\\" fill=\\"#f9a825\\"/>
                <text x=\\"98\\" y=\\"11\\" fill=\\"#9e4c98\\" font-size=\\"12\\" font-family=\\"'Segoe UI', Ubuntu, Sans-Serif\\">Linux</text>
                <rect x=\\"150\\" y=\\"0\\" width=\\"12\\" height=\\"12\\" fill=\\"#4caf50\\"/>
                <text x=\\"168\\" y=\\"11\\" fill=\\"#9e4c98\\" font-size=\\"12\\" font-family=\\"'Segoe UI', Ubuntu, Sans-Serif\\">Windows</text>
            </g>
            <svg xmlns:ct=\\"http://gionkunz.github.com/chartist-js/ct\\" width=\\"1200\\" height=\\"420\\" class=\\"ct-chart-line\\"><g class=\\"ct-grids\\"><line x1=\\"90\\" x2=\\"90\\" y1=\\"80\\" y2=\\"320\\" class=\\"ct-grid ct-horizontal\\"></line><line x1=\\"443.3333333333333\\" x2=\\"443.3333333333333\\" y1=\\"80\\" y2=\\"320\\" class=\\"ct-grid ct-horizontal\\"></line><line x1=\\"796.6666666666666\\" x2=\\"796.6666666666666\\" y1=\\"80\\" y2=\\"320\\" class=\\"ct-grid ct-horizontal\\"></line><line x1=\\"1150\\" x2=\\"1150\\" y1=\\"80\\" y2=\\"320\\" class=\\"ct-grid ct-horizontal\\"></line><line y1=\\"224\\" y2=\\"224\\" x1=\\"90\\" x2=\\"1150\\" class=\\"ct-grid ct-vertical\\"></line><line y1=\\"176\\" y2=\\"176\\" x1=\\"90\\" x2=\\"1150\\" class=\\"ct-grid ct-vertical\\"></line><line y1=\\"128\\" y2=\\"128\\" x1=\\"90\\" x2=\\"1150\\" class=\\"ct-grid ct-vertical\\"></line><line y1=\\"80\\" y2=\\"80\\" x1=\\"90\\" x2=\\"1150\\" class=\\"ct-grid ct-vertical\\"></line></g><g><g class=\\"ct-series ct-series-a\\"><path d=\\"M90,161.54C207.778,163.538,325.556,164.793,443.333,167.534C561.111,170.275,678.889,176.05,796.667,180.626C914.444,185.201,1032.222,190.241,1150,195.049\\" class=\\"ct-line\\"></path><line x1=\\"90\\" y1=\\"161.54013974546186\\" x2=\\"90.01\\" y2=\\"161.54013974546186\\" class=\\"ct-point\\" ct:value=\\"3.3012470886362113\\"></line><line x1=\\"443.3333333333333\\" y1=\\"167.53372677232304\\" x2=\\"443.3433333333333\\" y2=\\"167.53372677232304\\" class=\\"ct-point\\" ct:value=\\"3.1763806922432702\\"></line><line x1=\\"796.6666666666666\\" y1=\\"180.62563922795658\\" x2=\\"796.6766666666666\\" y2=\\"180.62563922795658\\" class=\\"ct-point\\" ct:value=\\"2.9036325160842376\\"></line><line x1=\\"1150\\" y1=\\"195.04907011423126\\" x2=\\"1150.01\\" y2=\\"195.04907011423126\\" class=\\"ct-point\\" ct:value=\\"2.603144372620182\\"></line></g><g class=\\"ct-series ct-series-b\\"><path d=\\"M90,167.534C207.778,170.349,325.556,172.841,443.333,175.979C561.111,179.117,678.889,182.534,796.667,186.614C914.444,190.694,1032.222,196.224,1150,201.029\\" class=\\"ct-line\\"></path><line x1=\\"90\\" y1=\\"167.53372677232304\\" x2=\\"90.01\\" y2=\\"167.53372677232304\\" class=\\"ct-point\\" ct:value=\\"3.1763806922432702\\"></line><line x1=\\"443.3333333333333\\" y1=\\"175.9791642809927\\" x2=\\"443.3433333333333\\" y2=\\"175.9791642809927\\" class=\\"ct-point\\" ct:value=\\"3.000434077479319\\"></line><line x1=\\"796.6666666666666\\" y1=\\"186.6140253438685\\" x2=\\"796.6766666666666\\" y2=\\"186.6140253438685\\" class=\\"ct-point\\" ct:value=\\"2.7788744720027396\\"></line><line x1=\\"1150\\" y1=\\"201.02880821149554\\" x2=\\"1150.01\\" y2=\\"201.02880821149554\\" class=\\"ct-point\\" ct:value=\\"2.478566495593843\\"></line></g><g class=\\"ct-series ct-series-c\\"><path d=\\"M90,175.979C207.778,178.455,325.556,180.383,443.333,183.406C561.111,186.428,678.889,190.757,796.667,195.049C914.444,199.341,1032.222,204.647,1150,209.447\\" class=\\"ct-line\\"></path><line x1=\\"90\\" y1=\\"175.9791642809927\\" x2=\\"90.01\\" y2=\\"175.9791642809927\\" class=\\"ct-point\\" ct:value=\\"3.000434077479319\\"></line><line x1=\\"443.3333333333333\\" y1=\\"183.4055351376004\\" x2=\\"443.3433333333333\\" y2=\\"183.4055351376004\\" class=\\"ct-point\\" ct:value=\\"2.8457180179666586\\"></line><line x1=\\"796.6666666666666\\" y1=\\"195.04907011423126\\" x2=\\"796.6766666666666\\" y2=\\"195.04907011423126\\" class=\\"ct-point\\" ct:value=\\"2.603144372620182\\"></line><line x1=\\"1150\\" y1=\\"209.4465892438165\\" x2=\\"1150.01\\" y2=\\"209.4465892438165\\" class=\\"ct-point\\" ct:value=\\"2.303196057420489\\"></line></g></g><g class=\\"ct-labels\\"><text x=\\"85.5\\" y=\\"340\\" width=\\"353.3333333333333\\" height=\\"70\\" class=\\"ct-label ct-horizontal ct-end\\">Q1 2024</text><text x=\\"438.8333333333333\\" y=\\"340\\" width=\\"353.3333333333333\\" height=\\"70\\" class=\\"ct-label ct-horizontal ct-end\\">Q2 2024</text><text x=\\"792.1666666666666\\" y=\\"340\\" width=\\"353.33333333333337\\" height=\\"70\\" class=\\"ct-label ct-horizontal ct-end\\">Q3 2024</text><text x=\\"1145.5\\" y=\\"340\\" width=\\"30\\" height=\\"70\\" class=\\"ct-label ct-horizontal ct-end\\">Q4 2024</text><text y=\\"228.5\\" x=\\"80\\" height=\\"48\\" width=\\"60\\" class=\\"ct-label ct-vertical ct-start\\">100</text><text y=\\"180.5\\" x=\\"80\\" height=\\"48\\" width=\\"60\\" class=\\"ct-label ct-vertical ct-start\\">1K</text><text y=\\"132.5\\" x=\\"80\\" height=\\"48\\" width=\\"60\\" class=\\"ct-label ct-vertical ct-start\\">10K</text><text y=\\"84.5\\" x=\\"80\\" height=\\"30\\" width=\\"60\\" class=\\"ct-label ct-vertical ct-start\\">100K</text></g><text class=\\"ct-axis-title ct-label\\" x=\\"620\\" y=\\"400\\" dominant-baseline=\\"text-after-edge\\" text-anchor=\\"middle\\">Quarter</text><text class=\\"ct-axis-title ct-label\\" x=\\"20\\" y=\\"200\\" transform=\\"rotate(-90, 20, 200)\\" dominant-baseline=\\"hanging\\" text-anchor=\\"middle\\">Downloads (log)</text></svg>
            
    </svg>
"
`;
